catalog page overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,10 @@ body {
     color: var(--color-richblack-5)
 }
 
-.swiper-slide {
+/* .swiper-slide {
   width: 100%;
   height: 100%;
-}
+} */
 
 /* Equivalent of blackButton */
 .blackButton {
