--- a/src/index.css
+++ b/src/index.css
@@ -150,3 +150,11 @@ html {
 .hide-scrollbar {
   -ms-overflow-style: none;
 }
+body {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Edge, Safari */
+}
